파일 삭제시 실제로 삭제되는것이 아닌 deleted컬럼에 true, false로 저장하여 랜더링