@@ -6,7 +6,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 @Repository
@@ -14,18 +13,22 @@ import java.util.List;
 public class FileRepositoryImpl implements FileRepositoryCustom {
 
     private final JPAQueryFactory query;
+    private final QFileEntity file = QFileEntity.fileEntity;
+
 
     @Override
     public List<Long> findPostIdsHavingFiles(Collection<Long> postIds) {
-        if (postIds == null || postIds.isEmpty()) return Collections.emptyList();
-
-        QFileEntity f = QFileEntity.fileEntity; // Q-타입 이름은 네 프로젝트에 맞게
-
+        if (postIds == null || postIds.isEmpty()) return List.of();
         return query
-                .select(f.postId)   // ← 필드명이 다르면 맞춰 변경
-                .from(f)
-                .where(f.postId.in(postIds))
+                .select(file.postId)
                 .distinct()
+                .from(file)
+                .where(
+                        file.deleted.isFalse(),
+                        file.postId.in(postIds)
+                )
                 .fetch();
     }
+
+
 }
